--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -74,7 +74,9 @@
 												<header>
 													<h3>Edit Your Reservation Here</h3>
 												</header>
-												<h3>By clicking the button below, a form will appear that you can use to make the appropriate changes to your reservation</h3>
+												<h3><!--By clicking the button below, a form will appear that you can use to make the appropriate changes to your reservation-->
+													<bold>[Editing reservations is still in progress. Other priorities took precedence.]</bold>
+												</h3>
 												<footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Edit Reservation</a></li>
@@ -85,7 +87,7 @@
 											<section>
 												<a href="#" class="image featured"><img src="images/deletereservation.jpg" alt="" /></a>
 												<header>
-													<h3>Delete Your Reservation Here</h3>
+													<h3>Delete Your Reservation By Clicking 'Delete Reservation' below</h3>
 												</header>
 												<footer>
 													<div class="center hideform">
