used-jQuery-to-display-label-for-showing-helper-text-after-deleting-a-reservation-for-client

--- a/soft-project/views/client_reservations.html
+++ b/soft-project/views/client_reservations.html
@@ -243,6 +243,7 @@
 																 alert(`Your reservation for room # ${roomInfo} has been deleted ${document.cookie}!`)
 
 																 document.getElementById('showData').innerHTML = '';
+																 $('#hideLabel').show();
 															  })
 														  }
 													  </script>
