--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -56,7 +56,9 @@
 						<header>
 							<h2>Hotel Search</h2>
 						</header>
-						<p>Kickstart your stay at our select locations!</p>
+						<p>Please go to the url: <strong>https://github.com/takingupspace/birdsuphotels</strong> and read the <strong>"Live Website"</strong><br/> section of
+							my project's README. As I'm adding new features, data for hotels is limited.
+						</p>
 						<br />
 						<br />
 
