gave-more-information-for-hotel-search

--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -57,7 +57,8 @@
 							<h2>Hotel Search</h2>
 						</header>
 						<p>Please go to the url: <strong>https://github.com/takingupspace/birdsuphotels</strong> and read the <strong>"Live Website"</strong><br/> section of
-							my project's README. As I'm adding new features, data for hotels is limited.
+							my project's README. As I'm adding new features, data for hotels is limited.<br />
+							<strong>Quick reference: Use the following cities in the "Location" field below: Orlando, Corpus Christi, Philadelphia, San Antonio, and Denver.</strong>
 						</p>
 						<br />
 						<br />
