skeleton-ui-for-add/remove-rooms

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -120,6 +120,7 @@
 								<li><a href="#work">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#properties">Properties</a></li>
+								<li><a href="#rooms">Rooms</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -127,6 +128,65 @@
 
 				<!-- Main -->
 					<div id="main">
+
+						<!--Add/Remove Rooms-->
+						<article id="rooms">
+							<h2 class="major">Add/Remove Properties</h2>
+							<span class="image main"><img src="images/pic01.jpg" alt="" />
+								<!--<input type="button" id="button3">Click to List Booked Properties-->
+								<!--<p id="showData"></p>--> <!--This is where our table for displaying the results of our isBooked GET request will go-->
+								<div id="divLeft">
+									<form action="http://localhost:3001/updateProperties" id="updatePropertiesForm"> <!--action="http://localhost:3001/updateBooking"-->
+										<fieldset>
+											<!--The fields we need are:
+											propId
+											locationName
+											address
+											city
+											state
+											roomsAvailable
+											hasPool
+											hasSpa
+											hasBusinessRoom
+											hasGym
+											imgURL
+											hasWifi
+											-->
+											<h2>Enter Property Info</h2>
+											<label for="propPropId">Property ID</label>
+											<input type="text" name="propPropId" placeholder="Enter the Unique Property ID">
+											<label for="propLocName">Location Name</label>
+											<input type="text" name="propLocName" placeholder="Enter the Location's Name">
+											<!--<label for="newLoc">Location Name</label>
+											<input type="text" name="locationName" placeholder="Enter Location Name">-->
+											<label for="propAddress">Address</label>
+											<input type="text" name="propAddress" placeholder="Enter the Address for the property">
+											<label for="propCity">City</label>
+											<input type="text" name="propCity" placeholder="Enter the city for the property">
+											<label for="propState">State</label>
+											<input type="text" name="propState" placeholder="Enter the state for the property">
+											<label for="propRoomsAvailable">Rooms Available</label>
+											<input type="text" name="propRoomsAvailable" placeholder="Enter how many rooms are available ">
+											<label for ="propHasPool">Has a Pool?</label>
+											<input type="text" name="propHasPool" placeholder="Enter 1 for has pool and 0 for doesn't have pool">
+											<label for ="propHasSpa">Has a Spa?</label>
+											<input type="text" name="propHasSpa" placeholder="Enter 1 for has spa and 0 for doesn't have spa">
+											<label for ="propHasBusinessRoom">Has a Business Room?</label>
+											<input type="text" name="propHasBusinessRoom" placeholder="Enter 1 for has business room and 0 for doesn't have a business room">
+											<label for ="propHasSpa">Has a Gym?</label>
+											<input type="text" name="propHasGym" placeholder="Enter 1 for has gym and 0 for doesn't have gym">
+											<label for ="propHasWifi">Has Wifi?</label>
+											<input type="text" name="propHasWifi" placeholder="Enter 1 for has WiFi and 0 for doesn't have WiFi">
+											<label for ="propImgURL">URL Image For Display of Property</label>
+											<input type="text" name="propImgURL" placeholder="Please copy and paste the URL where the image of the property is hosted">
+											<input type="checkbox" name="addProperty?" id="addOrRemoveProperty">
+											<label for ="propAddOrRemove">Click check-box to Add Property & Uncheck to Remove</label>
+											<input type="submit" id="propAddOrRemove">
+										</fieldset>
+									</form>
+								</div>
+							</span>
+						</article>
 
 						<!--Add/Remove Properties-->
 						<article id="properties">
