--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -139,18 +139,11 @@
 									<form action="http://localhost:3001/updateRooms" id="updateRoomsForm"> <!--action="http://localhost:3001/updateBooking"-->
 										<fieldset>
 											<!--The fields we need are:
+											roomId
+											roomNumber
 											propId
-											locationName
-											address
-											city
-											state
-											roomsAvailable
-											hasPool
-											hasSpa
-											hasBusinessRoom
-											hasGym
-											imgURL
-											hasWifi
+											totalCost
+											roomType
 											-->
 											<h2>Enter Room Info</h2>
 											<label for="roomRoomId">Room ID</label>
@@ -164,7 +157,7 @@
 											<label for="roomTotalCost">Room Price</label>
 											<input type="text" name="roomTotalCost" placeholder="Enter the price for this Room">
 											<label for="roomType">Type Of Room</label>
-											<input type="text" name="roomType" placeholder="Enter the Room Type: Standard/Queen/King">
+											<input type="text" name="roomRoomType" placeholder="Enter the Room Type: Standard/Queen/King">
 											<!--<label for="propRoomsAvailable">Rooms Available</label>
 											<input type="text" name="propRoomsAvailable" placeholder="Enter how many rooms are available ">
 											<label for ="propHasPool">Has a Pool?</label>
@@ -180,9 +173,41 @@
 											<label for ="propImgURL">URL Image For Display of Property</label>
 											<input type="text" name="propImgURL" placeholder="Please copy and paste the URL where the image of the property is hosted">-->
 											<input type="checkbox" name="addRoom?" id="addOrRemoveRoom">
-											<label for ="roomAddOrRemove">Click the check-box to Add the Room & Uncheck to Remove</label>
+											<label for ="addOrRemoveRoom">Click the check-box to Add the Room & Uncheck to Remove</label>
 											<input type="submit" id="roomAddOrRemove">
 										</fieldset>
+										<script>
+											/*
+												roomId
+												roomNumber
+												propId
+												totalCost
+												roomType
+											*/
+											$('#updateRoomsForm').submit(function(event){
+												event.preventDefault();
+												let checkBox = document.getElementById('addOrRemoveRoom');
+												var $form = $(this),
+												url = 'http://localhost:3001/addRoom',
+												roomId = $form.find("input[name='roomRoomId']").val(),
+												roomRoomNumber = $form.find("input[name='roomRoomNumber']").val(),
+												roomPropId = $form.find("input[name='roomPropId']").val(),
+												roomTotalCost = $form.find("input[name='roomTotalCost']").val(),
+												roomRoomType = $form.find("input[name='roomRoomType']").val();
+
+												var addRoom = $.post(url, {
+													roomId : roomId,
+													roomNumber : roomRoomNumber,
+													propId : roomPropId,
+													totalCost : roomTotalCost,
+													roomType : roomRoomType,
+												});
+												addRoom.done(function(data){
+													alert(data.message);
+												})
+
+											});
+										</script>
 									</form>
 								</div>
 							</span>
@@ -268,7 +293,7 @@
 													imgURL
 													hasWifi
 												*/
-												var $form = $(this),prop
+												var $form = $(this),
 												url = 'http://localhost:3001/addProperty'
 												propId = $form.find("input[name='propPropId']").val(),
 												locationName = $form.find("input[name='propLocationName']").val(),
