added-info-for-contact-form-on-admin-page

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -570,6 +570,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<p><strong>Fill out this form to send an email to the website's Administrator</strong></p>
 								<form action="http://localhost:3001/sendEmail" id="sendEmailForm">
 									<div class="fields">
 										<div class="field half">
