assign-ids-for-all-add-property-properties

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -255,31 +255,31 @@
 											-->
 											<h2>Enter Property Info</h2>
 											<label for="propPropId">Property ID</label>
-											<input type="text" name="propPropId" placeholder="Enter the Unique Property ID">
+											<input type="text" name="propPropId" id='idForPropPropId' placeholder="Enter the Unique Property ID">
 											<label for="propLocName">Location Name</label>
-											<input type="text" name="propLocationName" placeholder="Enter the Location's Name">
+											<input type="text" name="propLocationName" id='idForPropLocationName' placeholder="Enter the Location's Name">
 											<!--<label for="newLoc">Location Name</label>
 											<input type="text" name="locationName" placeholder="Enter Location Name">-->
 											<label for="propAddress">Address</label>
-											<input type="text" name="propAddress" placeholder="Enter the Address for the property">
+											<input type="text" name="propAddress" id='idForPropAddress' placeholder="Enter the Address for the property">
 											<label for="propCity">City</label>
-											<input type="text" name="propCity" placeholder="Enter the city for the property">
+											<input type="text" name="propCity" id='idForPropCity' placeholder="Enter the city for the property">
 											<label for="propState">State</label>
-											<input type="text" name="propState" placeholder="Enter the state for the property">
+											<input type="text" name="propState" id='idForPropState' placeholder="Enter the state for the property">
 											<label for="propRoomsAvailable">Rooms Available</label>
-											<input type="text" name="propRoomsAvailable" placeholder="Enter how many rooms are available ">
+											<input type="text" name="propRoomsAvailable" id='idForPropRoomsAvailable' placeholder="Enter how many rooms are available ">
 											<label for ="propHasPool">Has a Pool?</label>
-											<input type="text" name="propHasPool" placeholder="Enter 1 for has pool and 0 for doesn't have pool">
+											<input type="text" name="propHasPool" id='idForPropHasPool' placeholder="Enter 1 for has pool and 0 for doesn't have pool">
 											<label for ="propHasSpa">Has a Spa?</label>
-											<input type="text" name="propHasSpa" placeholder="Enter 1 for has spa and 0 for doesn't have spa">
+											<input type="text" name="propHasSpa" id='idForPropHasSpa' placeholder="Enter 1 for has spa and 0 for doesn't have spa">
 											<label for ="propHasBusinessRoom">Has a Business Room?</label>
-											<input type="text" name="propHasBusinessRoom" placeholder="Enter 1 for has business room and 0 for doesn't have a business room">
+											<input type="text" name="propHasBusinessRoom" id='idForPropHasBusinessRoom' placeholder="Enter 1 for has business room and 0 for doesn't have a business room">
 											<label for ="propHasSpa">Has a Gym?</label>
-											<input type="text" name="propHasGym" placeholder="Enter 1 for has gym and 0 for doesn't have gym">
+											<input type="text" name="propHasGym" id='idForPropHasGym' placeholder="Enter 1 for has gym and 0 for doesn't have gym">
 											<label for ="propHasWifi">Has Wifi?</label>
-											<input type="text" name="propHasWifi" placeholder="Enter 1 for has WiFi and 0 for doesn't have WiFi">
+											<input type="text" name="propHasWifi" id='idForPropHasWifi' placeholder="Enter 1 for has WiFi and 0 for doesn't have WiFi">
 											<label for ="propImgURL">URL Image For Display of Property</label>
-											<input type="text" name="propImgURL" placeholder="Please copy and paste the URL where the image of the property is hosted">
+											<input type="text" name="propImgURL" id='idForPropImgURL' placeholder="Please copy and paste the URL where the image of the property is hosted">
 											<input type="checkbox" name="addPropertyOrRemove" id="addOrRemoveProperty">
 											<label for ="addOrRemoveProperty">Click check-box to Add Property & Uncheck to Remove</label>
 											<input type="submit" id="propAddOrRemove">
