--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -280,6 +280,7 @@
 											<input type="text" name="propHasWifi" id='idForPropHasWifi' placeholder="Enter 1 for has WiFi and 0 for doesn't have WiFi">
 											<label for ="propImgURL">URL Image For Display of Property</label>
 											<input type="text" name="propImgURL" id='idForPropImgURL' placeholder="Please copy and paste the URL where the image of the property is hosted">
+											<input type ="file" name="propUploadImg" accept='image/*' />
 											<input type="checkbox" name="addPropertyOrRemove" id="addOrRemoveProperty">
 											<label for ="addOrRemoveProperty">Click check-box to Add Property & Uncheck to Remove</label>
 											<input type="submit" id="propAddOrRemove">
