fixed-image-for-hotel-search

--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -481,7 +481,7 @@
 
 				img = new Image();
 				img.id = "eachImage"
-				img.src = '/images/' + customerInfo[i][col[10]];
+				img.src = customerInfo[i][col[10]];
 				//img.src = '/images/EGB-utsa.jpg'
 				img.alt = "Missing Image"
 				parent.appendChild(img);
