added-more-login-mvc

--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -547,7 +547,7 @@
 
 							}
 
-						}
+						}// end of else statement for table creation
 
 							/* // we linearly push all of the JSON headers into our column array
 							var col = []; // this means that we will iterate through, row by row, populating the table
