--- a/soft-project/views/signup.html
+++ b/soft-project/views/signup.html
@@ -45,7 +45,7 @@
 								<!--Form for Login-->
 								<div style="width:50%; float:right;" class="content">
 									<h3>Login</h3>
-									<form action="http://birdsuphotels.com:3001/login" id="loginPOST">
+									<form action="http://localhost:3001/login" id="loginPOST">
 										<div class="row gtr-50">
 
 											<div class="col-12">
