--- a/soft-project/views/index.html
+++ b/soft-project/views/index.html
@@ -20,10 +20,10 @@
 			<!-- Header -->
 			<!-- TODO: FIX REFERENCES TO OTHER PAGES. USE INDEX.HTML AS A REFERENCE.-->
 				<header id="header">
-					<h1 id="logo"><a href="signin.html">Login to use our <span>Dataset</span></a></h1>
+					<h1 id="logo"><a href="index.html">Login to use our <span>Dataset</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Main Page</a></li>
+							<li class="current"><a href="indexLSDM.html">Main Page</a></li>
 							<li class="submenu">
 								<ul>
 									<li><a href="query.html">Query Page</a></li>
