--- a/soft-project/views/query/query.html
+++ b/soft-project/views/query/query.html
@@ -93,7 +93,7 @@
 									  }else secondTable = null
 									  console.log("second table is " + secondTable);
 									  console.log("first table is " + table);
-									  var getData = $.post("http://localhost:3001/getData",{
+									  var getData = $.post("http://birdsuphotels.com:3001/getData",{
 										  table : table,
 										  offset :offset,
 										  secondTable : secondTable
