--- a/soft-project/views/signup.html
+++ b/soft-project/views/signup.html
@@ -45,7 +45,7 @@
 								<!--Form for Login-->
 								<div style="width:50%; float:right;" class="content">
 									<h3>Login</h3>
-									<form action="http://localhost:3001/login" id="loginPOST">
+									<form action="http://birdsuphotels.com:3001/login" id="loginPOST">
 										<div class="row gtr-50">
 
 											<div class="col-12">
@@ -70,7 +70,7 @@
 									<h3>Sign Up</h3>
 									<div class="center hideform">
 									<button id='close'>Close</button>
-									<form action="http://localhost:3001/signup" id="customerPOST" name="loginForm">
+									<form action="http://birdsuphotels.com:3001/signup" id="customerPOST" name="loginForm">
 										<div style="margin-right:5%;" class="row gtr-50">
 											<div class="col-6 col-12-mobile">
 												<input type="text" name="firstName" placeholder="First Name" />
