--- a/soft-project/views/admin_page/index.html
+++ b/soft-project/views/admin_page/index.html
@@ -135,7 +135,7 @@
 								<!--<input type="button" id="button3">Click to List Booked Properties-->
 								<!--<p id="showData"></p>--> <!--This is where our table for displaying the results of our isBooked GET request will go-->
 								<div id="divLeft">
-									<form action="http://localhost:3001/updateRooms" id="updateRoomsForm"> <!--action="http://localhost:3001/updateBooking"-->
+									<form action="http://birdsuphotels.com:3001/updateRooms" id="updateRoomsForm"> <!--action="http://birdsuphotels.com:3001/updateBooking"-->
 										<fieldset>
 											<!--The fields we need are:
 											roomId
@@ -200,7 +200,7 @@
 													alert('You need to enter a type for this Room')
 												}else{
 												var $form = $(this),
-												url = 'http://localhost:3001/addRoom',
+												url = 'http://birdsuphotels.com:3001/addRoom',
 												roomId = $form.find("input[name='roomRoomId']").val(),
 												roomRoomNumber = $form.find("input[name='roomRoomNumber']").val(),
 												roomPropId = $form.find("input[name='roomPropId']").val(),
@@ -236,7 +236,7 @@
 								<!--<input type="button" id="button3">Click to List Booked Properties-->
 								<!--<p id="showData"></p>--> <!--This is where our table for displaying the results of our isBooked GET request will go-->
 								<div id="divLeft">
-									<form action="http://localhost:3001/updateProperties" id="updatePropertiesForm"> <!--action="http://localhost:3001/updateBooking"-->
+									<form action="http://birdsuphotels.com:3001/updateProperties" id="updatePropertiesForm"> <!--action="http://birdsuphotels.com:3001/updateBooking"-->
 										<fieldset>
 											<!--The fields we need are:
 											propId
@@ -336,7 +336,7 @@
 												}else{
 
 												var $form = $(this),
-												url = 'http://localhost:3001/addProperty',
+												url = 'http://birdsuphotels.com:3001/addProperty',
 												propId = $form.find("input[name='propPropId']").val(),
 												locationName = $form.find("input[name='propLocationName']").val(),
 												address = $form.find("input[name='propAddress']").val(),
@@ -383,7 +383,7 @@
 									<input type="button" id="button3">Click to List Booked Properties
 									<p id="showData"></p> <!--This is where our table for displaying the results of our isBooked GET request will go-->
 									<div id="divLeft">
-										<form action="http://localhost:3001/updateBooking" id="updateBookingForm"> <!--action="http://localhost:3001/updateBooking"-->
+										<form action="http://birdsuphotels.com:3001/updateBooking" id="updateBookingForm"> <!--action="http://birdsuphotels.com:3001/updateBooking"-->
 											<fieldset>
 												<h2>Enter reservation info</h2>
 												<label for="newClientFName">Client First Name</label>
@@ -452,7 +452,7 @@
 					e.preventDefault();
 					//alert(document.cookie)
 					const email = ('; '+document.cookie).split(`; birds_user_id=`).pop().split(';')[0];
-					var bookedRooms = $.post('http://localhost:3001/isBooked', {
+					var bookedRooms = $.post('http://birdsuphotels.com:3001/isBooked', {
 						email : email,
 						adminRoute : 1
 					});
@@ -605,7 +605,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="http://localhost:3001/sendEmail" id="sendEmailForm">
+								<form action="http://birdsuphotels.com:3001/sendEmail" id="sendEmailForm">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
